# NetLyra

./: .env.example  .gitignore  Dockerfile  LICENSE  PRODUCT_REQUIREMENTS_DOCUMENT.md  README.md  README.zh.md  Taskfile.yml  docker-compose.yml  go.mod  go.sum
.agent/skills/ui-ux-pro-max/: SKILL.md
.shared/: ui-ux-pro-max
bruno/: .gitignore  bruno.json  get-stats.bru  health-check.bru  list-alerts.bru  list-connections.bru
docs/: architecture.md
engine/: README.md  pyproject.toml
engine/src/engine/: __init__.py  consumer.py  main.py  model.py  producer.py
engine/src/netlyra_engine/: __init__.py
internal/api/: server.go  server_test.go  websocket.go
internal/capture/: capturer.go
internal/consumer/: consumer.go
internal/models/: schema.go
internal/producer/: producer.go
memory/: STATE.md
ui/: README.md  pubspec.yaml
ui/lib/: main.dart
ui/lib/models/: data_models.dart
ui/lib/pages/: dashboard_page.dart
ui/lib/services/: websocket_service.dart
ui/lib/theme/: colors.dart  typography.dart
ui/lib/widgets/: alert_item_tile.dart  bento_card.dart  connection_item_tile.dart  glitch_effect.dart  glow_text.dart  scanline_overlay.dart  stat_tile.dart  velocity_chart.dart
ui/linux/: CMakeLists.txt
ui/linux/runner/: my_application.cc
ui/test/: widget_test.dart
ui/web/: index.html  manifest.json
wasm/: main.go
